<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
    android:background="@android:color/transparent"
    tools:context="com.marcosdefreitas.maakereview.login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_02">

        <Space
            android:id="@+id/space_01"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/space_01"
            android:src="@drawable/logo2"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_entrar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lbl_login_criarconta"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:elegantTextHeight="false"
            android:fontFamily="@font/unica_one"
            android:text="@string/login_btnEntre_text"
            android:textColorLink="@android:color/holo_purple"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/lbl_login_criarconta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/space_02"
            android:layout_alignParentBottom="false"
            android:fontFamily="@font/raleway_medium"
            android:lineSpacingExtra="10sp"
            android:text="@string/login_register"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Space
            android:id="@+id/space_02"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="false" />

        <EditText
            android:id="@+id/txt_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/space_03"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/space_lateral_l"
            android:layout_toRightOf="@+id/space_lateral_r"
            android:drawableEnd="@android:drawable/ic_dialog_email"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/login_hint_user"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_user_login"
            android:layout_toLeftOf="@+id/space_lateral_l"
            android:layout_toRightOf="@+id/space_lateral_r"
            android:drawableEnd="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <Space
            android:id="@+id/space_03"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/imageView2"
            android:layout_toRightOf="@+id/space_lateral_r" />

        <TextView
            android:id="@+id/lbl_login_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_senha_login"
            android:layout_toLeftOf="@+id/space_lateral_l"
            android:layout_toRightOf="@+id/space_lateral_r"
            android:text="@string/login_forget"
            android:textAlignment="textEnd" />

        <Space
            android:id="@+id/space_lateral_r"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_entrar_login"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView2" />

        <Space
            android:id="@+id/space_lateral_l"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_entrar_login"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/imageView2" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
